tests/snapshots/examples_fixtures/type_system__failing__197_effect_row_subtract_unresolved_multi_e420.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/197_effect_row_subtract_unresolved_multi_e420.flx
== compile ==
failed (compile)
== diagnostics ==
error[E420]: Unresolved Effect Row

I cannot determine which effects this call should carry because these effect variables stay ambiguous: e, t.

  examples/type_system/failing/197_effect_row_subtract_unresolved_multi_e420.flx:8:5
  |
8 |     unresolved_many(1)
  |     ^^^^^^^^^^^^^^^
  |     --------------- this call leaves multiple effect variables ambiguous

  |     --------------- this call to `unresolved_many` creates the effect obligation

Note:
  ambiguous effect variables: e, t
  constraint source: effect-row checking for `unresolved_many`

Help:
  Add explicit `with ...` annotations or use callbacks with concrete effects to disambiguate.
== stdout ==
<not executed>
